Rename subcommands with proper aliases (v0.9.0)
- Rename 'get' to 'list' (aliases: ls, get)
- Rename 'delete' to 'remove' (aliases: rm, del, delete)
- Add 'new' alias for 'create'
- Add 'dl' alias for 'download'
- Add 'upd' alias for 'update'
- Rename 'config' to 'configure' (aliases: config, cfg)
- Reorder aliases: formal name first, shortcuts after
- Remove io_uring/FFM options from native-image build (Java 17 compatible)
- Bump version to 0.9.0