@@ -2,7 +2,7 @@
   (:require [clojure.tools.build.api :as b]))
 
 (def lib 'io.gitlab.myst3m/yaac)
-(def version "0.8.1")
+(def version "0.9.0")
 (def class-dir "target/classes")
 (def uber-file (format "target/%s-%s.jar" (name lib) version))
 (def native-image-name (format "target/%s-%s" (name lib) version))
@@ -44,18 +44,11 @@
     (b/process {:command-args [native-image-bin
                                "-jar" uber-file
                                "-o" native-image-name
-                               ;; GraalVM options - USE graal-build-time InitClojureClasses like zeph
+                               ;; GraalVM options
                                "--features=clj_easy.graal_build_time.InitClojureClasses"
                                "--no-fallback"
-                               "-H:+UnlockExperimentalVMOptions"
-                               ;; FFM support for zeph io_uring
-                               "--enable-native-access=ALL-UNNAMED"
-                               "-H:+ForeignAPISupport"
-                               "-H:+SharedArenaSupport"
                                ;; Build time init for libraries storing Java objects in Vars
                                "--initialize-at-build-time=org.fusesource.jansi,java.sql.Date"
-                               ;; Runtime init for zeph uring classes
-                               "--initialize-at-run-time=zeph.uring.IoUring,zeph.uring.Socket"
                                ;; Quick build mode (faster compile, slower runtime)
                                "-Ob"
                                ;; Resource limits
